types of numbers

--- a/2nd-page/page2.html
+++ b/2nd-page/page2.html
@@ -1,1 +1,13 @@
-<p> Types of numbers</p>;
+<!DOCTYPE html>
+<html>
+  <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>mathSite</title>
+  <link href="page2.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+    <h3>Types of Numbers</h3>
+</body>
+
