html file formal

--- a/5th-page/page5.html
+++ b/5th-page/page5.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>mathSite</title>
-  <link href="index.css" rel="stylesheet" type="text/css" />
+  <link href="page5.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
-  
+
 </body>
