--- a/html/page2.html
+++ b/html/page2.html
@@ -4,9 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>mathSite</title>
-  <link href="page3.css" rel="stylesheet" type="text/css" />
+  <link href="page2.css" rel="stylesheet" type="text/css" />
 </head>
-<body>
 
-  
+<body>
+    <h3>Types of Numbers</h3>
+    <a href="page3.html">Page 3</a>
 </body>
+
