--- a/html/page3.html
+++ b/html/page3.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>mathSite</title>
-  <link href="page4.css" rel="stylesheet" type="text/css" />
+  <link href="page3.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-
+  <a href="page4.html">Page 4</a>
   
 </body>
