--- a/html/page4.html
+++ b/html/page4.html
@@ -4,10 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>mathSite</title>
-  <link href="page2.css" rel="stylesheet" type="text/css" />
+  <link href="page4.css" rel="stylesheet" type="text/css" />
 </head>
-
 <body>
-    <h3>Types of Numbers</h3>
+  <a href="page5.html">Page 5</a>
+  
 </body>
-
