added temporary headings

--- a/html/page5.html
+++ b/html/page5.html
@@ -7,6 +7,7 @@
   <link href="page5.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+  <h3>Here is the answer:</h3>
   <a href="index.html">Back To Home</a>
 
 </body>
