--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
   <link href="index.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+  <h3>Operations</h3>
   <a href="page2.html">Page 2</a>
   
 </body>
