--- a/html/page3.html
+++ b/html/page3.html
@@ -7,6 +7,7 @@
   <link href="page3.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+  <h3>Diffuculty</h3>
   <a href="page4.html">Page 4</a>
   
 </body>
