--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,14 @@
   <link href="index.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a href="page2.html">Page 2</a>
-  
+  <header>
+ mathemagics.com
+  </header>
+   <a 
+  href="page2.html">
+  <button type="button" class="block" id="addition">+</button>
+  <button type="button" class="block" id="subtraction"> − </button>
+<br> <button type="button" class="block" id="multiplication"> × </button>
+    <button type="button" class="block" id="division"> ÷ </button>
+   </a>
 </body>
