--- a/html/page2.html
+++ b/html/page2.html
@@ -8,7 +8,15 @@
 </head>
 
 <body>
-    <h3>Types of Numbers</h3>
-    <a href="page3.html">Page 3</a>
-</body>
 
+    <h1>Types of Numbers?</h1>
+
+    <a href="page3.hmtl">Whole Numbers</a>
+
+    <a href="page3.hmtl">Decimals</a>
+
+    <a href="page3.hmtl">Fractions</a>
+
+    <a href="page3.html">Page 3</a>
+
+</body>
