--- a/html/page2.html
+++ b/html/page2.html
@@ -8,15 +8,15 @@
 </head>
 
 <body>
+  <h1>Types of Numbers?</h1>
+  
+  <button type="btn whlNum">Whole Numbers</button>
+  <br>
+  <button type="btn dec">Decimals</button>
+  <br>
+  <button type="btn frac">Fractions</button>
+  <br>
 
-    <h1>Types of Numbers?</h1>
-
-    <a href="page3.hmtl">Whole Numbers</a>
-
-    <a href="page3.hmtl">Decimals</a>
-
-    <a href="page3.hmtl">Fractions</a>
-
-    <a href="page3.html">Page 3</a>
+  <a href="page3.html">Page 3</a>
 
 </body>
