--- a/html/page2.html
+++ b/html/page2.html
@@ -17,6 +17,12 @@
   <button type="btn frac">Fractions</button>
   <br>
 
+
+  <button onclick="page3.html">Whole Numbers</button>
+
+  <a href="page3.html">Whole Numbers</a>
+  <a href="page3.html">Decimals</a>
+  <a href="page3.html">Page 3</a>
   <a href="page3.html">Page 3</a>
 
 </body>
