--- a/html/page2.html
+++ b/html/page2.html
@@ -9,20 +9,19 @@
 
 <body>
   <h1>Types of Numbers?</h1>
-  
-  <button type="btn whlNum">Whole Numbers</button>
-  <br>
-  <button type="btn dec">Decimals</button>
-  <br>
-  <button type="btn frac">Fractions</button>
-  <br>
+  <div class="container">
+    <a href="page3.html">
+      <button class="btn-1">Whole Numbers</button>
+      <br>
 
+      <button class="btn-2">Decimals</button>
+      <br>
 
-  <button onclick="page3.html">Whole Numbers</button>
+      <button class="btn-3">Fractions</button>
+      <br>
+    </a>
 
-  <a href="page3.html">Whole Numbers</a>
-  <a href="page3.html">Decimals</a>
-  <a href="page3.html">Page 3</a>
   <a href="page3.html">Page 3</a>
 
+  </div>
 </body>
