New button style 2.0

--- a/html/page2.html
+++ b/html/page2.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>mathSite</title>
+  <title>replit</title>
   <link href="page2.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -25,3 +26,5 @@
 
   </div>
 </body>
+
+</html>
