Cleaning everything up.

--- a/html/index.html
+++ b/html/index.html
@@ -10,11 +10,14 @@
   <header>
  mathemagics.com
   </header>
-   <a 
-  href="page2.html">
-  <button type="button" class="block" id="addition">+</button>
-  <button type="button" class="block" id="subtraction"> − </button>
-<br> <button type="button" class="block" id="multiplication"> × </button>
+  <br>
+  <br>
+  <h2>Click to Select Operation:</h2>
+   <a href="page2.html">
+    <button type="button" class="block" id="addition">+</button>
+    <button id= "subtraction" type="button" class="block"> − </button>
+    <br>
+    <button type="button" class="block" id="multiplication"> × </button>
     <button type="button" class="block" id="division"> ÷ </button>
    </a>
 </body>
