Cleaning up code

--- a/html/index.html
+++ b/html/index.html
@@ -4,12 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>mathSite</title>
-  <link href="index.css" rel="stylesheet" type="text/css" />
+  <link href="index.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <header>
- mathemagics.com
-  </header>
+  <header> mathemagics.com </header>
   <br>
   <br>
   <h2>Click to Select Operation:</h2>
