--- a/page3.html
+++ b/page3.html
@@ -6,8 +6,15 @@
   <title>mathSite</title>
   <link href="page3.css" rel="stylesheet" type="text/css" />
 </head>
+<header>
+  <img src="logo.png" alt="Mathemagics.com" height="60px">
+  <div style="float:right; margin-right:2%;"> Difficulty </div>
+</header>
 <body>
-  <h3>Diffuculty</h3>
-  <a href="page4.html">Page 4</a>
-  
-</body>
+ 
+  <a href="page4.html"><br>
+<button type="button" class="block" id="easy" style="left:25%" >Easy</button><br>
+  <button type="button" class="block" id="medium" style="left:50%">Medium</button>
+<br> <button type="button" class="block" id="hard" style="left:75%">Hard</button>
+  </a>
+</body>  
