--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>mathSite</title>
-  <link href="index.css" rel="stylesheet" type="text/css" />
+  <link href="index.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
-  <header>
- mathemagics.com
-  </header>
-   <a 
-  href="page2.html">
-  <button type="button" class="block" id="addition">+</button>
-  <button type="button" class="block" id="subtraction"> − </button>
-<br> <button type="button" class="block" id="multiplication"> × </button>
+  <header> mathemagics.com </header>
+  <br>
+  <br>
+  <h2>Click to Select Operation:</h2>
+   <a href="page2.html">
+    <button type="button" class="block" id="addition">+</button>
+    <button id= "subtraction" type="button" class="block"> − </button>
+    <br>
+    <button type="button" class="block" id="multiplication"> × </button>
     <button type="button" class="block" id="division"> ÷ </button>
    </a>
 </body>
