--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>mathSite</title>
-  <link href="index.css" rel="stylesheet" type="text/css"/>
+  <link href="index.css" rel="stylesheet" type="text/css" />
 </head>
+<header>
+  <div style="text-align: center"> 
+  <img src="logo.png" alt="Mathemagics.com" height="60px">
+    </div>
+</header>
 <body>
-  <header> mathemagics.com </header>
-  <br>
   <br>
   <h2>Click to Select Operation:</h2>
    <a href="page2.html">
