--- a/page3.html
+++ b/page3.html
@@ -7,8 +7,10 @@
   <link href="page3.css" rel="stylesheet" type="text/css" />
 </head>
 <header>
+  <div style="text-align: center"> 
   <img src="logo.png" alt="Mathemagics.com" height="60px">
-  <div style="float:right; margin-right:2%;"> Difficulty </div>
+  </div>
+  <div style="float:right; margin-right:2%;"> Difficulty    </div>
 </header>
 <body>
  
@@ -17,4 +19,6 @@
   <button type="button" class="block" id="medium" style="left:50%">Medium</button>
 <br> <button type="button" class="block" id="hard" style="left:75%">Hard</button>
   </a>
+  <a href="page2.html"><button class="block" id="goback">Go Back</button> </a>
 </body>  
+</html>
