--- a/everything/page2.html
+++ b/everything/page2.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>mathSite</title>
   <link href="page2.css" rel="stylesheet" type="text/css" />
 </head>
+<header>
+  <div style="text-align: center"> 
+  <img src="logo.png" alt="Mathemagics.com" height="60px">
+    </div>
+</header>
 
 <body>
-  <h1>Types of Numbers?</h1>
-  <div class="container">
-    <a href="page3.html">
-      <button class="btn-1">Whole Numbers</button>
-      <br>
 
-      <button class="btn-2">Decimals</button>
-      <br>
-
-      <button class="btn-3">Fractions</button>
-      <br>
-    </a>
-  </div>
-  <a href="index.html"> <button>Go Back</button> </a>
+<div style="float:right; margin-right:2%; font-size:40px;`"> Types of Numbers?</div>
+  <a href="page3.html">
+     <button class="btn-1">Whole Numbers</button>
+     <button class="btn-2">Decimals</button>
+     <button class="btn-3">Fractions</button>
+  </a><br>
+  <a href="index.html"> <button class="goback">Go Back</button> </a>
 </body>
-
 </html>
