--- a/everything/page2.html
+++ b/everything/page2.html
@@ -14,7 +14,7 @@
 
 <body>
 
-<div style="float:right; margin-right:2%; font-size:40px;`"> Types of Numbers?</div>
+<div style="float:right; margin-right:2%; font-size:40px;"> Types of Numbers?</div>
   <a href="page3.html">
      <button class="btn-1">Whole Numbers</button>
      <button class="btn-2">Decimals</button>
