--- a/page4.html
+++ b/page4.html
@@ -6,11 +6,19 @@
   <title>mathSite</title>
   <link href="page4.css" rel="stylesheet" type="text/css" />
 </head>
+<header>
+  <div style="text-align: center"> 
+  <img src="logo.png" alt="Mathemagics.com" height="60px">
+    </div>
+</header>
 <body>
-  <h3>Here is your problem:</h3>
-  
-
-
-  <a href="page5.html">Page 5</a>
+  <br>
+  <br>
+  <h2>Here is your problem:</h2>
+  <h1>Heres the Problem</h1>
+  <br>
+  <a href="page5.html">
+    <button>Click Here For the Answer!</button>
+  </a>
   
 </body>
