--- a/page5.html
+++ b/page5.html
@@ -6,8 +6,15 @@
   <title>mathSite</title>
   <link href="page5.css" rel="stylesheet" type="text/css" />
 </head>
+<header>
+  <div style="text-align: center"> 
+  <img src="logo.png" alt="Mathemagics.com" height="60px">
+    </div>
+</header>
 <body>
-  <h3>Here is the answer:</h3>
-  <a href="index.html">Back To Home</a>
-
+  <h2>Here is the answer:</h2>
+  <h1>999999+999999</h1>
+  <a href="index.html">
+    <button>Return to Home</button>
+  </a>
 </body>
