--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <header>
   <div style="text-align: center"> 
-  <img src="logo.png" alt="Mathemagics.com" height="60px">
-    </div>
+    <img src="logo.png" alt="Mathemagics.com" height="60px">
+  </div>
 </header>
 <body>
   <br>
   <h2>Click to Select Operation:</h2>
-   <a href="page2.html">
+  <a href="page2.html">
     <button type="button" class="block" id="addition">+</button>
-    <button id= "subtraction" type="button" class="block"> − </button>
+    <button  type="button" class="block" id="subtraction"> − </button>
     <br>
     <button type="button" class="block" id="multiplication"> × </button>
     <button type="button" class="block" id="division"> ÷ </button>
-   </a>
+  </a>
 </body>
