--- a/page2.html
+++ b/page2.html
@@ -8,18 +8,19 @@
 </head>
 <header>
   <div style="text-align: center"> 
-  <img src="logo.png" alt="Mathemagics.com" height="60px">
-    </div>
+    <img src="logo.png" alt="Mathemagics.com" height="60px">
+  </div>
 </header>
-
 <body>
-
-<div style="float:right; margin-right:2%; font-size:40px;"> Types of Numbers?</div>
+  <div style="float:right; margin-right:2%; font-size:40px;"> Types of Numbers?</div>
   <a href="page3.html">
-     <button class="btn-1">Whole Numbers</button>
-     <button class="btn-2">Decimals</button>
-     <button class="btn-3">Fractions</button>
-  </a><br>
-  <a href="index.html"> <button class="goback">Go Back</button> </a>
+   <button class="btn-1">Whole Numbers</button>
+   <button class="btn-2">Decimals</button>
+   <button class="btn-3">Fractions</button>
+  </a>
+  <br>
+  <a href="index.html">
+    <button class="goback">Go Back</button>
+  </a>
 </body>
 </html>
