blank sections for the equations

--- a/page4.html
+++ b/page4.html
@@ -15,7 +15,7 @@
   <br>
   <br>
   <h2>Here is your problem:</h2>
-  <h1>Heres the Problem</h1>
+  <p id="question"> </p>
   <br>
   <a href="page5.html">
     <button>Click Here For the Answer!</button>
