--- a/page2.html
+++ b/page2.html
@@ -14,9 +14,9 @@
 <body>
   <div style="float:right; margin-right:2%; font-size:40px;"> Types of Numbers?</div>
   <a href="page3.html">
-     <button onclick = "whlnum()" class="btn-1">Whole Numbers</button>
-     <button onclick = "decimal()" class="btn-2">Decimals</button>
-     <button onclick = "fraction()" class="btn-3">Fractions</button>
+     <button onclick = "whl()" class="btn-1">Whole Numbers</button>
+     <button onclick = "dec()" class="btn-2">Decimals</button>
+     <button onclick = "frac()" class="btn-3">Fractions</button>
   </a><br>
   <a href="index.html"> <button class="goback">Go Back</button> </a>
 </body>
