--- a/page4.html
+++ b/page4.html
@@ -15,13 +15,13 @@
   <br>
   <br>
   <h2>Here is your problem:</h2>
-  <p id="question"></p>
-
-  <script src="page4.js"></script>
+  <p id="question">question</p>
 
   <br>
   <a href="page5.html">
     <button>Click Here For the Answer!</button>
   </a>
-  
+
+  <script src="page4.js"></script>
+
 </body>
