--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <button onclick = "add()" type="button" class="block" id="addition">+</button>
     <button onclick = "sub()" id= "subtraction" type="button" class="block"> − </button>
     <br>
-    <button onclick = "mul()" type="button" class="block" id="multiplication"> x </button>
-    <button onclick = "div()" type="button" class="block" id="division"> ÷ </button>
+    <button onclick = "mul()" type="button" class="block" id="multiplication"> × </button>    <button onclick = "div()" type="button" class="block" id="division"> ÷ </button>
    </a>
    <script src = "index.js"></script>
 
