--- a/page5.html
+++ b/page5.html
@@ -14,7 +14,11 @@
 <body>
   <h2>Here is the answer:</h2>
   <p id="answer"> </p>
+
   <a href="index.html">
     <button>Return to Home</button>
   </a>
+
+  <script src="page5.js"></script>
+
 </body>
