--- a/page5.html
+++ b/page5.html
@@ -13,12 +13,13 @@
 </header>
 <body>
   <h2>Here is the answer:</h2>
-  <p id="answer"> </p>
+
+  <p id="answer">answer</p>
 
   <a href="index.html">
     <button>Return to Home</button>
   </a>
 
   <script src="page5.js"></script>
-
+  
 </body>
