--- a/page2.html
+++ b/page2.html
@@ -18,7 +18,7 @@
      <button onclick = "dec()" class="btn-2">Decimals</button>
      <button onclick = "frac()" class="btn-3">Fractions</button>
   </a><br>
-  <a href="index.html"> <button class="goback">Go Back</button> </a>
+  <a href="index.html"> <button class="goback">Reset</button> </a>
 </body>
 
 <script src="page2.js"></script>
