--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>mathSite</title>
+  <title>MatheMagics</title>
   <link href="page2.css" rel="stylesheet" type="text/css" />
 </head>
 <header>
